# choclo

./: .flake8  .gitignore  AUTHORS.md  CITATION.rst  LICENSE.txt  Makefile  README.md  environment.yml  example.py  pyproject.toml  setup.cfg
.github/workflows/: actions.yml  docs.yml  publish.yml  pypi.yml  style.yml  test.yml
choclo/: __init__.py  _distance.py  _point.py  _prism.py  _version.py  constants.py  point.py  utils.py
choclo/dipole/: __init__.py  _forward.py
choclo/point/: __init__.py  _forward.py  _forward_spherical.py  _kernels.py  forward.py
choclo/prism/: __init__.py  _forward.py  _gravity.py  _kernels.py  _magnetic.py  _utils.py
choclo/tests/: __init__.py  test_dipole.py  test_distance.py  test_point.py  test_point_gravity.py  test_point_kernels.py  test_prism.py  test_prism_gravity.py  test_prism_kernels.py  test_prism_magnetic.py  test_prism_safe_log.py  utils.py
dev/: .buildinfo  changes.html  citing.html  compatibility.html  genindex.html  index.html  install.html  objects.inv  overview.html  py-modindex.html  references.html  search.html  searchindex.js  versions.html
dev/_downloads/0cd804d4bb1b789ed7d110b2910079bf/: jacobian.ipynb
dev/_downloads/21b045eb65658e7f0dbd75b01bedc72a/: jacobian.py
dev/_downloads/313b8b90999108adb84ffcf2515619aa/: overview.ipynb
dev/_downloads/903b89fd3874d64d371a9beff7139999/: how-to-use.ipynb
dev/_modules/: index.html
dev/_modules/choclo/: utils.html
dev/_sources/: changes.rst  compatibility.rst  index.rst.txt  install.rst  overview.rst  references.rst  versions.rst
dev/_sources/api/: index.rst
dev/_sources/user_guide/: how-to-use.rst  jacobian.rst
dev/api/: index.html
dev/doctrees/: citing.doctree  environment.pickle  index.doctree  references.doctree
dev/doctrees/api/: index.doctree
dev/html/: .buildinfo  citing.html  genindex.html  index.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js
dev/html/_modules/: index.html
dev/html/_sources/: references.rst.txt
dev/html/api/: index.html
dev/user_guide/: how-to-use.html  jacobian.html
doc/: changes.rst  citing.rst  conf.py  index.rst  install.rst  overview.rst  versions.rst
doc/api/: index.rst
doc/user_guide/: how-to-use.rst  jacobian.rst
env/: requirements-docs.txt  requirements-style.txt
src/choclo/: __init__.py  constants.py  utils.py
src/choclo/dipole/: _forward.py
src/choclo/point/: __init__.py  _forward.py  _kernels.py
src/choclo/prism/: __init__.py  _gravity.py  _magnetic.py
test/: test_dipole.py  test_distance.py  test_point_gravity.py  test_prism_gravity.py  test_prism_kernels.py  test_prism_magnetic.py  test_prism_safe_log.py
tools/: license_notice.py
v0.0.1/: .buildinfo  citing.html  compatibility.html  genindex.html  index.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js
v0.0.1/_modules/: index.html
v0.0.1/_modules/choclo/: utils.html
v0.0.1/api/: index.html
v0.1.0/: .buildinfo  changes.html  citing.html  compatibility.html  genindex.html  index.html  install.html  objects.inv  overview.html  py-modindex.html  references.html  search.html  searchindex.js  versions.html
v0.1.0/_downloads/0cd804d4bb1b789ed7d110b2910079bf/: jacobian.ipynb
v0.1.0/_downloads/313b8b90999108adb84ffcf2515619aa/: overview.ipynb
v0.1.0/_downloads/903b89fd3874d64d371a9beff7139999/: how-to-use.ipynb
v0.1.0/_modules/: index.html
v0.1.0/_modules/choclo/: utils.html
v0.1.0/_sources/: index.rst.txt  install.rst.txt
v0.1.0/_sources/api/: index.rst.txt
v0.1.0/api/: index.html
v0.1.0/user_guide/: how-to-use.html  jacobian.html
v0.2.0/: .buildinfo  changes.html  citing.html  compatibility.html  genindex.html  index.html  install.html  objects.inv  overview.html  py-modindex.html  references.html  search.html  searchindex.js  versions.html
v0.2.0/_downloads/0cd804d4bb1b789ed7d110b2910079bf/: jacobian.ipynb
v0.2.0/_downloads/313b8b90999108adb84ffcf2515619aa/: overview.ipynb
v0.2.0/_downloads/903b89fd3874d64d371a9beff7139999/: how-to-use.ipynb
v0.2.0/_modules/: index.html
v0.2.0/_modules/choclo/: utils.html
v0.2.0/api/: index.html
v0.2.0/user_guide/: how-to-use.html  jacobian.html
v0.3.0/: changes.html  citing.html  compatibility.html  genindex.html  index.html  install.html  objects.inv  overview.html  py-modindex.html  references.html  search.html  searchindex.js  versions.html
v0.3.0/_downloads/0cd804d4bb1b789ed7d110b2910079bf/: jacobian.ipynb
v0.3.0/_downloads/313b8b90999108adb84ffcf2515619aa/: overview.ipynb
v0.3.0/_downloads/903b89fd3874d64d371a9beff7139999/: how-to-use.ipynb
v0.3.0/_modules/: index.html
v0.3.0/_modules/choclo/: utils.html
v0.3.0/_sources/: changes.rst  install.rst
v0.3.0/api/: index.html
v0.3.0/user_guide/: how-to-use.html  jacobian.html
v0.3.1/: changes.html  citing.html  compatibility.html  genindex.html  index.html  install.html  objects.inv  overview.html  py-modindex.html  references.html  search.html  searchindex.js  versions.html
v0.3.1/_downloads/0cd804d4bb1b789ed7d110b2910079bf/: jacobian.ipynb
v0.3.1/_downloads/313b8b90999108adb84ffcf2515619aa/: overview.ipynb
v0.3.1/_downloads/903b89fd3874d64d371a9beff7139999/: how-to-use.ipynb
v0.3.1/_modules/: index.html
v0.3.1/_modules/choclo/: utils.html
v0.3.1/_sources/api/: index.rst
v0.3.1/api/: index.html
v0.3.1/user_guide/: how-to-use.html  jacobian.html
v0.3.2/: changes.html  citing.html  compatibility.html  genindex.html  index.html  install.html  objects.inv  overview.html  py-modindex.html  references.html  search.html  searchindex.js  versions.html
v0.3.2/_downloads/0cd804d4bb1b789ed7d110b2910079bf/: jacobian.ipynb
v0.3.2/_downloads/313b8b90999108adb84ffcf2515619aa/: overview.ipynb
v0.3.2/_downloads/903b89fd3874d64d371a9beff7139999/: how-to-use.ipynb
v0.3.2/_downloads/cde25ab50cf916af92411d8e96a39f11/: overview.py
v0.3.2/_modules/: index.html
v0.3.2/_modules/choclo/: utils.html
v0.3.2/_sources/: changes.rst
v0.3.2/api/: index.html
v0.3.2/user_guide/: how-to-use.html  jacobian.html
(+43 files in other folders)
