[project]
name = "choclo"
description = "Kernel functions for your geophysical models"
dynamic = ["version"]
authors = [
  {name="The Choclo Developers", email="fatiandoaterra@protonmail.com"},
]
maintainers = [
  {name = "Santiago Soler", email = "santisoler@fastmail.com"}
]
readme = "README.md"
license = {text = "BSD-3-Clause"}
keywords = ["geoscience", "geophysics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19",
    "numba>=0.52",
]

[project.urls]
"Documentation" = "https://www.fatiando.org/choclo"
"Changelog" = "https://www.fatiando.org/choclo/latest/changes.html"
"Bug Tracker" = "https://github.com/fatiando/choclo/issues"
"Source Code" = "https://github.com/fatiando/choclo"

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=8.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme =  "post-release"
local_scheme =  "no-local-version"
write_to =  "choclo/_version.py"

# Make sure isort and Black are compatible
[tool.isort]
profile = "black"
multi_line_output = 3

[tool.burocrata]
notice = '''
# Copyright (c) 2022 The Choclo Developers.
# Distributed under the terms of the BSD 3-Clause License.
# SPDX-License-Identifier: BSD-3-Clause
#
# This code is part of the Fatiando a Terra project (https://www.fatiando.org)
#'''

[tool.ruff]
line-length = 88
exclude = [
    "doc/_build",
    "choclo/_version.py",
]

[tool.ruff.lint]
extend-select = [
  "ARG",      # flake8-unused-arguments
  "B",        # flake8-bugbear
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "EXE",      # flake8-executable
  "FURB",     # refurb
  "G",        # flake8-logging-format
  "I",        # isort
  "ICN",      # flake8-import-conventions
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "PYI",      # flake8-pyi
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
]
ignore = [
  "ISC001",   # Conflicts with formatter
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "RET504",   # allow variable assignment only for return
  "PT001",    # conventions for parenthesis on pytest.fixture
]

[tool.ruff.lint.per-file-ignores]
# disable unused-imports errors on __init__.py
"__init__.py" = ["F401"]
# disable unused arguments in kernel files
"_kernels.py" = ["ARG001"]
